--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -7,7 +7,7 @@ profiles:
     helm:
       releases:
       - name: prod
-        chartPath: ./osdfir-infrastructure
+        chartPath: ./osdfir-infrastructure/charts/osdfir-infrastructure
         skipBuildDependencies: true
         recreatePods: false
         setValues:
